lab4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> expression ;
Rule 7     instruction -> assignment ;
Rule 8     instruction -> break_statement ;
Rule 9     instruction -> continue_statement ;
Rule 10    instruction -> return_statement ;
Rule 11    instruction -> print_statement ;
Rule 12    instruction -> for_statement
Rule 13    instruction -> compound_statement
Rule 14    instruction -> if_statement
Rule 15    instruction -> while_statement
Rule 16    compound_statement -> { instructions_opt }
Rule 17    expression -> expression + expression
Rule 18    expression -> expression * expression
Rule 19    expression -> expression - expression
Rule 20    expression -> expression / expression
Rule 21    expression -> expression DOTADD expression
Rule 22    expression -> expression DOTSUB expression
Rule 23    expression -> expression DOTMUL expression
Rule 24    expression -> expression DOTDIV expression
Rule 25    expression -> expression LE expression
Rule 26    expression -> expression GE expression
Rule 27    expression -> expression NE expression
Rule 28    expression -> expression EQ expression
Rule 29    expression -> expression < expression
Rule 30    expression -> expression > expression
Rule 31    expression -> ( expression )
Rule 32    expression -> [ expression_list ]
Rule 33    expression -> ZEROS ( expression )
Rule 34    expression -> ONES ( expression )
Rule 35    expression -> EYE ( expression )
Rule 36    expression -> ! expression
Rule 37    expression -> - expression
Rule 38    expression -> ID
Rule 39    expression -> ID [ expression_list ]
Rule 40    expression -> INTNUM
Rule 41    expression -> FLOATNUM
Rule 42    expression -> STRING
Rule 43    expression -> expression '
Rule 44    assignment -> lvalue = expression
Rule 45    assignment -> lvalue ADDASSIGN expression
Rule 46    assignment -> lvalue SUBASSIGN expression
Rule 47    assignment -> lvalue MULASSIGN expression
Rule 48    assignment -> lvalue DIVASSIGN expression
Rule 49    lvalue -> ID
Rule 50    lvalue -> ID [ expression_list ]
Rule 51    expression_list -> expression
Rule 52    expression_list -> expression_list , expression
Rule 53    if_statement -> IF ( expression ) instruction
Rule 54    if_statement -> IF ( expression ) instruction ELSE instruction
Rule 55    while_statement -> WHILE ( expression ) instruction
Rule 56    range -> expression : expression
Rule 57    for_statement -> FOR ID = range instruction
Rule 58    break_statement -> BREAK
Rule 59    continue_statement -> CONTINUE
Rule 60    return_statement -> RETURN expression
Rule 61    return_statement -> RETURN
Rule 62    print_statement -> PRINT expression_list

Terminals, with rules where they appear

!                    : 36
'                    : 43
(                    : 31 33 34 35 53 54 55
)                    : 31 33 34 35 53 54 55
*                    : 18
+                    : 17
,                    : 52
-                    : 19 37
/                    : 20
:                    : 56
;                    : 6 7 8 9 10 11
<                    : 29
=                    : 44 57
>                    : 30
ADDASSIGN            : 45
BREAK                : 58
CONTINUE             : 59
DIVASSIGN            : 48
DOTADD               : 21
DOTDIV               : 24
DOTMUL               : 23
DOTSUB               : 22
ELSE                 : 54
EQ                   : 28
EYE                  : 35
FLOATNUM             : 41
FOR                  : 57
GE                   : 26
ID                   : 38 39 49 50 57
IF                   : 53 54
INTNUM               : 40
LE                   : 25
MULASSIGN            : 47
NE                   : 27
ONES                 : 34
PRINT                : 62
RETURN               : 60 61
STRING               : 42
SUBASSIGN            : 46
WHILE                : 55
ZEROS                : 33
[                    : 32 39 50
]                    : 32 39 50
error                : 
{                    : 16
}                    : 16

Nonterminals, with rules where they appear

assignment           : 7
break_statement      : 8
compound_statement   : 13
continue_statement   : 9
expression           : 6 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 33 34 35 36 37 43 44 45 46 47 48 51 52 53 54 55 56 56 60
expression_list      : 32 39 50 52 62
for_statement        : 12
if_statement         : 14
instruction          : 4 5 53 54 54 55 57
instructions         : 2 4
instructions_opt     : 1 16
lvalue               : 44 45 46 47 48
print_statement      : 11
program              : 0
range                : 57
return_statement     : 10
while_statement      : 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . expression ;
    (7) instruction -> . assignment ;
    (8) instruction -> . break_statement ;
    (9) instruction -> . continue_statement ;
    (10) instruction -> . return_statement ;
    (11) instruction -> . print_statement ;
    (12) instruction -> . for_statement
    (13) instruction -> . compound_statement
    (14) instruction -> . if_statement
    (15) instruction -> . while_statement
    (17) expression -> . expression + expression
    (18) expression -> . expression * expression
    (19) expression -> . expression - expression
    (20) expression -> . expression / expression
    (21) expression -> . expression DOTADD expression
    (22) expression -> . expression DOTSUB expression
    (23) expression -> . expression DOTMUL expression
    (24) expression -> . expression DOTDIV expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression NE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . ( expression )
    (32) expression -> . [ expression_list ]
    (33) expression -> . ZEROS ( expression )
    (34) expression -> . ONES ( expression )
    (35) expression -> . EYE ( expression )
    (36) expression -> . ! expression
    (37) expression -> . - expression
    (38) expression -> . ID
    (39) expression -> . ID [ expression_list ]
    (40) expression -> . INTNUM
    (41) expression -> . FLOATNUM
    (42) expression -> . STRING
    (43) expression -> . expression '
    (44) assignment -> . lvalue = expression
    (45) assignment -> . lvalue ADDASSIGN expression
    (46) assignment -> . lvalue SUBASSIGN expression
    (47) assignment -> . lvalue MULASSIGN expression
    (48) assignment -> . lvalue DIVASSIGN expression
    (58) break_statement -> . BREAK
    (59) continue_statement -> . CONTINUE
    (60) return_statement -> . RETURN expression
    (61) return_statement -> . RETURN
    (62) print_statement -> . PRINT expression_list
    (57) for_statement -> . FOR ID = range instruction
    (16) compound_statement -> . { instructions_opt }
    (53) if_statement -> . IF ( expression ) instruction
    (54) if_statement -> . IF ( expression ) instruction ELSE instruction
    (55) while_statement -> . WHILE ( expression ) instruction
    (49) lvalue -> . ID
    (50) lvalue -> . ID [ expression_list ]

    $end            reduce using rule 3 (instructions_opt -> .)
    (               shift and go to state 16
    [               shift and go to state 17
    ZEROS           shift and go to state 18
    ONES            shift and go to state 19
    EYE             shift and go to state 20
    !               shift and go to state 21
    -               shift and go to state 15
    ID              shift and go to state 22
    INTNUM          shift and go to state 23
    FLOATNUM        shift and go to state 24
    STRING          shift and go to state 25
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 28
    RETURN          shift and go to state 29
    PRINT           shift and go to state 30
    FOR             shift and go to state 31
    {               shift and go to state 32
    IF              shift and go to state 33
    WHILE           shift and go to state 34

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    expression                     shift and go to state 5
    assignment                     shift and go to state 6
    break_statement                shift and go to state 7
    continue_statement             shift and go to state 8
    return_statement               shift and go to state 9
    print_statement                shift and go to state 10
    for_statement                  shift and go to state 11
    compound_statement             shift and go to state 12
    if_statement                   shift and go to state 13
    while_statement                shift and go to state 14
    lvalue                         shift and go to state 26

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . expression ;
    (7) instruction -> . assignment ;
    (8) instruction -> . break_statement ;
    (9) instruction -> . continue_statement ;
    (10) instruction -> . return_statement ;
    (11) instruction -> . print_statement ;
    (12) instruction -> . for_statement
    (13) instruction -> . compound_statement
    (14) instruction -> . if_statement
    (15) instruction -> . while_statement
    (17) expression -> . expression + expression
    (18) expression -> . expression * expression
    (19) expression -> . expression - expression
    (20) expression -> . expression / expression
    (21) expression -> . expression DOTADD expression
    (22) expression -> . expression DOTSUB expression
    (23) expression -> . expression DOTMUL expression
    (24) expression -> . expression DOTDIV expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression NE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . ( expression )
    (32) expression -> . [ expression_list ]
    (33) expression -> . ZEROS ( expression )
    (34) expression -> . ONES ( expression )
    (35) expression -> . EYE ( expression )
    (36) expression -> . ! expression
    (37) expression -> . - expression
    (38) expression -> . ID
    (39) expression -> . ID [ expression_list ]
    (40) expression -> . INTNUM
    (41) expression -> . FLOATNUM
    (42) expression -> . STRING
    (43) expression -> . expression '
    (44) assignment -> . lvalue = expression
    (45) assignment -> . lvalue ADDASSIGN expression
    (46) assignment -> . lvalue SUBASSIGN expression
    (47) assignment -> . lvalue MULASSIGN expression
    (48) assignment -> . lvalue DIVASSIGN expression
    (58) break_statement -> . BREAK
    (59) continue_statement -> . CONTINUE
    (60) return_statement -> . RETURN expression
    (61) return_statement -> . RETURN
    (62) print_statement -> . PRINT expression_list
    (57) for_statement -> . FOR ID = range instruction
    (16) compound_statement -> . { instructions_opt }
    (53) if_statement -> . IF ( expression ) instruction
    (54) if_statement -> . IF ( expression ) instruction ELSE instruction
    (55) while_statement -> . WHILE ( expression ) instruction
    (49) lvalue -> . ID
    (50) lvalue -> . ID [ expression_list ]

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    }               reduce using rule 2 (instructions_opt -> instructions .)
    (               shift and go to state 16
    [               shift and go to state 17
    ZEROS           shift and go to state 18
    ONES            shift and go to state 19
    EYE             shift and go to state 20
    !               shift and go to state 21
    -               shift and go to state 15
    ID              shift and go to state 22
    INTNUM          shift and go to state 23
    FLOATNUM        shift and go to state 24
    STRING          shift and go to state 25
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 28
    RETURN          shift and go to state 29
    PRINT           shift and go to state 30
    FOR             shift and go to state 31
    {               shift and go to state 32
    IF              shift and go to state 33
    WHILE           shift and go to state 34

    instruction                    shift and go to state 35
    expression                     shift and go to state 5
    assignment                     shift and go to state 6
    break_statement                shift and go to state 7
    continue_statement             shift and go to state 8
    return_statement               shift and go to state 9
    print_statement                shift and go to state 10
    for_statement                  shift and go to state 11
    compound_statement             shift and go to state 12
    if_statement                   shift and go to state 13
    while_statement                shift and go to state 14
    lvalue                         shift and go to state 26

state 4

    (5) instructions -> instruction .

    (               reduce using rule 5 (instructions -> instruction .)
    [               reduce using rule 5 (instructions -> instruction .)
    ZEROS           reduce using rule 5 (instructions -> instruction .)
    ONES            reduce using rule 5 (instructions -> instruction .)
    EYE             reduce using rule 5 (instructions -> instruction .)
    !               reduce using rule 5 (instructions -> instruction .)
    -               reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    INTNUM          reduce using rule 5 (instructions -> instruction .)
    FLOATNUM        reduce using rule 5 (instructions -> instruction .)
    STRING          reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    {               reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> expression . ;
    (17) expression -> expression . + expression
    (18) expression -> expression . * expression
    (19) expression -> expression . - expression
    (20) expression -> expression . / expression
    (21) expression -> expression . DOTADD expression
    (22) expression -> expression . DOTSUB expression
    (23) expression -> expression . DOTMUL expression
    (24) expression -> expression . DOTDIV expression
    (25) expression -> expression . LE expression
    (26) expression -> expression . GE expression
    (27) expression -> expression . NE expression
    (28) expression -> expression . EQ expression
    (29) expression -> expression . < expression
    (30) expression -> expression . > expression
    (43) expression -> expression . '

    ;               shift and go to state 36
    +               shift and go to state 37
    *               shift and go to state 38
    -               shift and go to state 39
    /               shift and go to state 40
    DOTADD          shift and go to state 41
    DOTSUB          shift and go to state 42
    DOTMUL          shift and go to state 43
    DOTDIV          shift and go to state 44
    LE              shift and go to state 45
    GE              shift and go to state 46
    NE              shift and go to state 47
    EQ              shift and go to state 48
    <               shift and go to state 49
    >               shift and go to state 50
    '               shift and go to state 51


state 6

    (7) instruction -> assignment . ;

    ;               shift and go to state 52


state 7

    (8) instruction -> break_statement . ;

    ;               shift and go to state 53


state 8

    (9) instruction -> continue_statement . ;

    ;               shift and go to state 54


state 9

    (10) instruction -> return_statement . ;

    ;               shift and go to state 55


state 10

    (11) instruction -> print_statement . ;

    ;               shift and go to state 56


state 11

    (12) instruction -> for_statement .

    (               reduce using rule 12 (instruction -> for_statement .)
    [               reduce using rule 12 (instruction -> for_statement .)
    ZEROS           reduce using rule 12 (instruction -> for_statement .)
    ONES            reduce using rule 12 (instruction -> for_statement .)
    EYE             reduce using rule 12 (instruction -> for_statement .)
    !               reduce using rule 12 (instruction -> for_statement .)
    -               reduce using rule 12 (instruction -> for_statement .)
    ID              reduce using rule 12 (instruction -> for_statement .)
    INTNUM          reduce using rule 12 (instruction -> for_statement .)
    FLOATNUM        reduce using rule 12 (instruction -> for_statement .)
    STRING          reduce using rule 12 (instruction -> for_statement .)
    BREAK           reduce using rule 12 (instruction -> for_statement .)
    CONTINUE        reduce using rule 12 (instruction -> for_statement .)
    RETURN          reduce using rule 12 (instruction -> for_statement .)
    PRINT           reduce using rule 12 (instruction -> for_statement .)
    FOR             reduce using rule 12 (instruction -> for_statement .)
    {               reduce using rule 12 (instruction -> for_statement .)
    IF              reduce using rule 12 (instruction -> for_statement .)
    WHILE           reduce using rule 12 (instruction -> for_statement .)
    $end            reduce using rule 12 (instruction -> for_statement .)
    }               reduce using rule 12 (instruction -> for_statement .)
    ELSE            reduce using rule 12 (instruction -> for_statement .)


state 12

    (13) instruction -> compound_statement .

    (               reduce using rule 13 (instruction -> compound_statement .)
    [               reduce using rule 13 (instruction -> compound_statement .)
    ZEROS           reduce using rule 13 (instruction -> compound_statement .)
    ONES            reduce using rule 13 (instruction -> compound_statement .)
    EYE             reduce using rule 13 (instruction -> compound_statement .)
    !               reduce using rule 13 (instruction -> compound_statement .)
    -               reduce using rule 13 (instruction -> compound_statement .)
    ID              reduce using rule 13 (instruction -> compound_statement .)
    INTNUM          reduce using rule 13 (instruction -> compound_statement .)
    FLOATNUM        reduce using rule 13 (instruction -> compound_statement .)
    STRING          reduce using rule 13 (instruction -> compound_statement .)
    BREAK           reduce using rule 13 (instruction -> compound_statement .)
    CONTINUE        reduce using rule 13 (instruction -> compound_statement .)
    RETURN          reduce using rule 13 (instruction -> compound_statement .)
    PRINT           reduce using rule 13 (instruction -> compound_statement .)
    FOR             reduce using rule 13 (instruction -> compound_statement .)
    {               reduce using rule 13 (instruction -> compound_statement .)
    IF              reduce using rule 13 (instruction -> compound_statement .)
    WHILE           reduce using rule 13 (instruction -> compound_statement .)
    $end            reduce using rule 13 (instruction -> compound_statement .)
    }               reduce using rule 13 (instruction -> compound_statement .)
    ELSE            reduce using rule 13 (instruction -> compound_statement .)


state 13

    (14) instruction -> if_statement .

    (               reduce using rule 14 (instruction -> if_statement .)
    [               reduce using rule 14 (instruction -> if_statement .)
    ZEROS           reduce using rule 14 (instruction -> if_statement .)
    ONES            reduce using rule 14 (instruction -> if_statement .)
    EYE             reduce using rule 14 (instruction -> if_statement .)
    !               reduce using rule 14 (instruction -> if_statement .)
    -               reduce using rule 14 (instruction -> if_statement .)
    ID              reduce using rule 14 (instruction -> if_statement .)
    INTNUM          reduce using rule 14 (instruction -> if_statement .)
    FLOATNUM        reduce using rule 14 (instruction -> if_statement .)
    STRING          reduce using rule 14 (instruction -> if_statement .)
    BREAK           reduce using rule 14 (instruction -> if_statement .)
    CONTINUE        reduce using rule 14 (instruction -> if_statement .)
    RETURN          reduce using rule 14 (instruction -> if_statement .)
    PRINT           reduce using rule 14 (instruction -> if_statement .)
    FOR             reduce using rule 14 (instruction -> if_statement .)
    {               reduce using rule 14 (instruction -> if_statement .)
    IF              reduce using rule 14 (instruction -> if_statement .)
    WHILE           reduce using rule 14 (instruction -> if_statement .)
    $end            reduce using rule 14 (instruction -> if_statement .)
    }               reduce using rule 14 (instruction -> if_statement .)
    ELSE            reduce using rule 14 (instruction -> if_statement .)


state 14

    (15) instruction -> while_statement .

    (               reduce using rule 15 (instruction -> while_statement .)
    [               reduce using rule 15 (instruction -> while_statement .)
    ZEROS           reduce using rule 15 (instruction -> while_statement .)
    ONES            reduce using rule 15 (instruction -> while_statement .)
    EYE             reduce using rule 15 (instruction -> while_statement .)
    !               reduce using rule 15 (instruction -> while_statement .)
    -               reduce using rule 15 (instruction -> while_statement .)
    ID              reduce using rule 15 (instruction -> while_statement .)
    INTNUM          reduce using rule 15 (instruction -> while_statement .)
    FLOATNUM        reduce using rule 15 (instruction -> while_statement .)
    STRING          reduce using rule 15 (instruction -> while_statement .)
    BREAK           reduce using rule 15 (instruction -> while_statement .)
    CONTINUE        reduce using rule 15 (instruction -> while_statement .)
    RETURN          reduce using rule 15 (instruction -> while_statement .)
    PRINT           reduce using rule 15 (instruction -> while_statement .)
    FOR             reduce using rule 15 (instruction -> while_statement .)
    {               reduce using rule 15 (instruction -> while_statement .)
    IF              reduce using rule 15 (instruction -> while_statement .)
    WHILE           reduce using rule 15 (instruction -> while_statement .)
    $end            reduce using rule 15 (instruction -> while_statement .)
    }               reduce using rule 15 (instruction -> while_statement .)
    ELSE            reduce using rule 15 (instruction -> while_statement .)


state 15

    (37) expression -> - . expression
    (17) expression -> . expression + expression
    (18) expression -> . expression * expression
    (19) expression -> . expression - expression
    (20) expression -> . expression / expression
    (21) expression -> . expression DOTADD expression
    (22) expression -> . expression DOTSUB expression
    (23) expression -> . expression DOTMUL expression
    (24) expression -> . expression DOTDIV expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression NE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . ( expression )
    (32) expression -> . [ expression_list ]
    (33) expression -> . ZEROS ( expression )
    (34) expression -> . ONES ( expression )
    (35) expression -> . EYE ( expression )
    (36) expression -> . ! expression
    (37) expression -> . - expression
    (38) expression -> . ID
    (39) expression -> . ID [ expression_list ]
    (40) expression -> . INTNUM
    (41) expression -> . FLOATNUM
    (42) expression -> . STRING
    (43) expression -> . expression '

    (               shift and go to state 16
    [               shift and go to state 17
    ZEROS           shift and go to state 18
    ONES            shift and go to state 19
    EYE             shift and go to state 20
    !               shift and go to state 21
    -               shift and go to state 15
    ID              shift and go to state 58
    INTNUM          shift and go to state 23
    FLOATNUM        shift and go to state 24
    STRING          shift and go to state 25

    expression                     shift and go to state 57

state 16

    (31) expression -> ( . expression )
    (17) expression -> . expression + expression
    (18) expression -> . expression * expression
    (19) expression -> . expression - expression
    (20) expression -> . expression / expression
    (21) expression -> . expression DOTADD expression
    (22) expression -> . expression DOTSUB expression
    (23) expression -> . expression DOTMUL expression
    (24) expression -> . expression DOTDIV expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression NE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . ( expression )
    (32) expression -> . [ expression_list ]
    (33) expression -> . ZEROS ( expression )
    (34) expression -> . ONES ( expression )
    (35) expression -> . EYE ( expression )
    (36) expression -> . ! expression
    (37) expression -> . - expression
    (38) expression -> . ID
    (39) expression -> . ID [ expression_list ]
    (40) expression -> . INTNUM
    (41) expression -> . FLOATNUM
    (42) expression -> . STRING
    (43) expression -> . expression '

    (               shift and go to state 16
    [               shift and go to state 17
    ZEROS           shift and go to state 18
    ONES            shift and go to state 19
    EYE             shift and go to state 20
    !               shift and go to state 21
    -               shift and go to state 15
    ID              shift and go to state 58
    INTNUM          shift and go to state 23
    FLOATNUM        shift and go to state 24
    STRING          shift and go to state 25

    expression                     shift and go to state 59

state 17

    (32) expression -> [ . expression_list ]
    (51) expression_list -> . expression
    (52) expression_list -> . expression_list , expression
    (17) expression -> . expression + expression
    (18) expression -> . expression * expression
    (19) expression -> . expression - expression
    (20) expression -> . expression / expression
    (21) expression -> . expression DOTADD expression
    (22) expression -> . expression DOTSUB expression
    (23) expression -> . expression DOTMUL expression
    (24) expression -> . expression DOTDIV expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression NE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . ( expression )
    (32) expression -> . [ expression_list ]
    (33) expression -> . ZEROS ( expression )
    (34) expression -> . ONES ( expression )
    (35) expression -> . EYE ( expression )
    (36) expression -> . ! expression
    (37) expression -> . - expression
    (38) expression -> . ID
    (39) expression -> . ID [ expression_list ]
    (40) expression -> . INTNUM
    (41) expression -> . FLOATNUM
    (42) expression -> . STRING
    (43) expression -> . expression '

    (               shift and go to state 16
    [               shift and go to state 17
    ZEROS           shift and go to state 18
    ONES            shift and go to state 19
    EYE             shift and go to state 20
    !               shift and go to state 21
    -               shift and go to state 15
    ID              shift and go to state 58
    INTNUM          shift and go to state 23
    FLOATNUM        shift and go to state 24
    STRING          shift and go to state 25

    expression_list                shift and go to state 60
    expression                     shift and go to state 61

state 18

    (33) expression -> ZEROS . ( expression )

    (               shift and go to state 62


state 19

    (34) expression -> ONES . ( expression )

    (               shift and go to state 63


state 20

    (35) expression -> EYE . ( expression )

    (               shift and go to state 64


state 21

    (36) expression -> ! . expression
    (17) expression -> . expression + expression
    (18) expression -> . expression * expression
    (19) expression -> . expression - expression
    (20) expression -> . expression / expression
    (21) expression -> . expression DOTADD expression
    (22) expression -> . expression DOTSUB expression
    (23) expression -> . expression DOTMUL expression
    (24) expression -> . expression DOTDIV expression
    (25) expression -> . expression LE expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression NE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression < expression
    (30) expression -> . expression > expression
    (31) expression -> . ( expression )
    (32) expression -> . [ expression_list ]
    (33) expression -> . ZEROS ( expression )
    (34) expression -> . ONES ( expression )
    (35) expression -> . EYE ( expression )
    (36) expression -> . ! expression
    (37) expression -> . - expression
    (38) expression -> . ID
    (39) expression -> . ID [ expression_list ]
    (40) expression -> . INTNUM
    (41) expression -> . FLOATNUM
    (42) expression -> . STRING
    (43) expression -> . expression '

    (               shift and go to state 16
    [               shift and go to state 17
    ZEROS           shift and go to state 18
    ONES            shift and go to state 19
    EYE             shift and go to state 20
    !               shift and go to state 21
    -               shift and go to state 15
    ID              shift and go to state 58
    INTNUM          shift and go to state 23
    FLOATNUM        shift and go to state 24
    STRING          shift and go to state 25

    expression                     shift and go to state 65

state 22

    (38) expression -> ID .
    (39) expression -> ID . [ expression_list ]
    (49) lvalue -> ID .
    (50) lvalue -> ID . [ expression_list ]

    ;               reduce using rule 38 (expression -> ID .)
    +               reduce using rule 38 (expression -> ID .)
    *               reduce using rule 38 (expression -> ID .)
    -               reduce using rule 38 (expression -> ID .)
    /               reduce using rule 38 (expression -> ID .)
    DOTADD          reduce using rule 38 (expression -> ID .)
    DOTSUB          reduce using rule 38 (expression -> ID .)
    DOTMUL          reduce using rule 38 (expression -> ID .)
    DOTDIV          reduce using rule 38 (expression -> ID .)
    LE              reduce using rule 38 (expression -> ID .)
    GE              reduce using rule 38 (expression -> ID .)
    NE              reduce using rule 38 (expression -> ID .)
    EQ              reduce using rule 38 (expression -> ID .)
    <               reduce using rule 38 (expression -> ID .)
    >               reduce using rule 38 (expression -> ID .)
    '               reduce using rule 38 (expression -> ID .)
    [               shift and go to state 66
    =               reduce using rule 49 (lvalue -> ID .)
    ADDASSIGN       reduce using rule 49 (lvalue -> ID .)
    SUBASSIGN       reduce using rule 49 (lvalue -> ID .)
    MULASSIGN       reduce using rule 49 (lvalue -> ID .)
    DIVASSIGN       reduce using rule 49 (lvalue -> ID .)


state 23

    (40) expression -> INTNUM .
